--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     }
   },
   "dependencies": {
+    "babylonjs": "^4.2.1",
     "dgram": "^1.0.1",
     "electron-reload": "^2.0.0-alpha.1",
     "electron-squirrel-startup": "^1.0.0",
