--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "screenchaser",
+  "type": "module",
   "productName": "ScreenChaser",
   "version": "1.0.0",
   "description": "My Electron application description",
@@ -43,6 +44,7 @@
   },
   "dependencies": {
     "babylonjs": "^4.2.1",
+    "babylonjs-loaders": "^4.2.1",
     "dgram": "^1.0.1",
     "electron-reload": "^2.0.0-alpha.1",
     "electron-squirrel-startup": "^1.0.0",
