--- a/package.json
+++ b/package.json
@@ -42,11 +42,13 @@
     }
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "babylonjs": "^4.2.1",
     "babylonjs-loaders": "^4.2.1",
     "dgram": "^1.0.1",
     "electron-reload": "^2.0.0-alpha.1",
     "electron-squirrel-startup": "^1.0.0",
+    "express": "^4.18.1",
     "ws": "^7.5.1"
   },
   "devDependencies": {
