--- a/package.json
+++ b/package.json
@@ -45,10 +45,13 @@
     "axios": "^0.27.2",
     "babylonjs": "^4.2.1",
     "babylonjs-loaders": "^4.2.1",
+    "broadcast-stream": "^0.2.2",
     "dgram": "^1.0.1",
     "electron-reload": "^2.0.0-alpha.1",
     "electron-squirrel-startup": "^1.0.0",
     "express": "^4.18.1",
+    "mjpeg-camera": "^2.0.0",
+    "socket.io": "^4.5.0",
     "ws": "^7.5.1"
   },
   "devDependencies": {
