--- a/package.json
+++ b/package.json
@@ -63,6 +63,6 @@
     "@electron-forge/maker-squirrel": "^6.0.0-beta.57",
     "@electron-forge/maker-zip": "^6.0.0-beta.57",
     "devtron": "^1.4.0",
-    "electron": "8.0.2"
+    "electron": "^18.2.0"
   }
 }
