--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "electron-reload": "^2.0.0-alpha.1",
     "electron-squirrel-startup": "^1.0.0",
     "express": "^4.18.1",
+    "forever-monitor": "^3.0.3",
     "helmet": "^5.0.2",
     "ip": "^1.1.5",
     "mjpeg-camera": "^2.0.0",
