--- a/cli-src/package.json
+++ b/cli-src/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@inquirer/select": "^0.0.27-alpha.0",
     "cli-spinners": "^2.7.0",
-    "inquirer": "^9.1.2"
+    "inquirer": "^9.1.2",
+    "log-update": "^5.0.1"
   }
 }
