--- a/cli-src/package.json
+++ b/cli-src/package.json
@@ -6,14 +6,11 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@inquirer/select": "^0.0.27-alpha.0",
-    "cli-spinners": "^2.7.0",
-    "inquirer": "^9.1.2",
-    "log-update": "^5.0.1"
+    "inquirer": "^8.1.2",
+    "chalk": "^4.1.2"
   }
 }
