--- a/cli-src/package.json
+++ b/cli-src/package.json
@@ -10,7 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chalk": "^4.1.2",
     "inquirer": "^8.1.2",
-    "chalk": "^4.1.2"
+    "node-notifier": "^10.0.1"
   }
 }
