--- a/cli-src/package.json
+++ b/cli-src/package.json
@@ -1,10 +1,15 @@
 {
-  "name": "cli-src",
+  "name": "screenchaser-cli",
   "version": "1.0.0",
-  "description": "",
+  "description": "Basic UI for ScreenChaser",
   "main": "index.js",
+  "preferGlobal": true,
+  "bin": {
+    "sc": "index.js"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "cd .. && cp -R ./effects ./cli-src/effects_build"
   },
   "keywords": [],
   "author": "",
