--- a/app-src/package.json
+++ b/app-src/package.json
@@ -15,6 +15,7 @@
     "@electron/remote": "^2.0.8",
     "@emotion/react": "^11.10.4",
     "@emotion/server": "^11.10.0",
+    "@emotion/styled": "^11.10.4",
     "@mantine/carousel": "^5.5.5",
     "@mantine/core": "^5.5.5",
     "@mantine/dates": "^5.5.5",
