--- a/app-src/package.json
+++ b/app-src/package.json
@@ -3,9 +3,11 @@
   "name": "screen-chaser",
   "description": "leds are follow me",
   "version": "1.0.0",
-  "author": "xi72yow",
+  "author": "xi72yow <x@xi72yow.de> (https://xi72yow.de)",
   "main": "app/background.js",
   "homepage": "https://github.com/xi72yow/ScreenChaser",
+  "email": "x@xi72yow.de",
+  "url": "https://xi72yow.de",
   "scripts": {
     "dev": "nextron",
     "build": "npx next build ./renderer && nextron build",
