--- a/app-src/package.json
+++ b/app-src/package.json
@@ -33,6 +33,8 @@
     "@mantine/spotlight": "^5.5.5",
     "@tabler/icons": "^1.104.0",
     "dayjs": "^1.11.5",
+    "dexie": "^3.2.2",
+    "dexie-react-hooks": "^1.1.1",
     "electron-serve": "^1.1.0",
     "electron-store": "^8.1.0",
     "embla-carousel-react": "^7.0.3",
