--- a/app-src/renderer/tsconfig.json
+++ b/app-src/renderer/tsconfig.json
@@ -3,9 +3,8 @@
   "include": [
     "next-env.d.ts",
     "**/*.ts",
-    "**/*.tsx"
-, "components/navbar/Logo.js"  ],
-  "exclude": [
-    "node_modules"
-  ]
+    "**/*.tsx",
+    "components/navbar/Logo.js"
+  ],
+  "exclude": ["node_modules"]
 }
