--- a/app-src/electron-builder.yml
+++ b/app-src/electron-builder.yml
@@ -25,8 +25,10 @@ linux:
 # Windows Configuration
 win:
   target:
-    - target: "nsis"
-      arch: "x64"
+    - target: portable
+      arch: x64
+    - target: nsis
+      arch: x64
 # Windows Installer Configuration
 nsis:
   oneClick: false
@@ -36,7 +38,7 @@ nsis:
 # macOS Configuration
 mac:
   target:
-    - target: "dmg"
+    - target: dmg
       arch:
-        - "universal"
+        - universal
 publish: null
