--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   release:
-    name: Release Screenchaser
+    name: Release ScreenChaser
     runs-on: ubuntu-latest
     needs: [win-build, linux-build]
     steps:
@@ -52,7 +52,7 @@ jobs:
         with:
           cmd: build:app # will run `yarn build:app` command
 
-      - name: Upload
+      - name: Upload Windows Apps
         uses: actions/upload-artifact@v3
         with:
           name: win-build-app
@@ -81,7 +81,7 @@ jobs:
         with:
           cmd: build:app # will run `yarn build:app` command
 
-      - name: Upload
+      - name: Upload Linux Apps
         uses: actions/upload-artifact@v3
         with:
           name: lin-build-app
