--- a/core-src/package.json
+++ b/core-src/package.json
@@ -1,7 +1,6 @@
 {
   "name": "screenchaser-core",
   "description": "description",
-  "authors": "author",
   "version": "0.1.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -12,8 +11,9 @@
     "dev": "nodemon lib/effectTest.ts"
   },
   "keywords": [],
-  "author": "",
+  "author": "xi72yow",
   "devDependencies": {
+    "@types/node": "^18.11.10",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3"
