chore: hoisting for ci

--- a/package.json
+++ b/package.json
@@ -23,9 +23,7 @@
       "**/electron",
       "**/electron/**",
       "**/jest",
-      "**/jest/**",
-      "**/screenchaser-app/**",
-      "**/screenchaser-cli/**"
+      "**/jest/**"
     ]
   },
   "devDependencies": {
