--- a/app-src/package.json
+++ b/app-src/package.json
@@ -40,6 +40,7 @@
     "electron-serve": "^1.1.0",
     "electron-store": "^8.1.0",
     "embla-carousel-react": "^7.0.3",
+    "react-error-boundary": "^3.1.4",
     "screenchaser-core": "^0.2.0",
     "serialport": "^10.4.0",
     "three": "^0.146.0"
