--- a/app-src/package.json
+++ b/app-src/package.json
@@ -56,6 +56,7 @@
     "nextron": "^8.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "socket.io": "^4.5.4",
     "typescript": "^4.8.2"
   }
 }
