chore(app): start new data concept

--- a/app-src/package.json
+++ b/app-src/package.json
@@ -2,6 +2,7 @@
   "name": "screenchaser-app",
   "description": "leds are follow me",
   "version": "0.3.2",
+  "databaseVersion": "1",
   "author": "xi72yow <x@xi72yow.de> (https://xi72yow.de)",
   "main": "app/background.js",
   "homepage": "https://github.com/xi72yow/ScreenChaser",
@@ -39,7 +40,6 @@
     "dexie-react-hooks": "^1.1.1",
     "electron-serve": "^1.1.0",
     "electron-store": "^8.1.0",
-    "embla-carousel-react": "^7.0.3",
     "react-error-boundary": "^3.1.4",
     "screenchaser-core": "^0.2.3",
     "serialport": "^10.4.0",
@@ -49,7 +49,6 @@
     "@types/node": "^16.11.7",
     "@types/react": "^18.0.8",
     "@types/w3c-image-capture": "^1.0.7",
-    "commit-and-tag-version": "^10.1.0",
     "electron": "^20.1.0",
     "electron-builder": "^23.3.3",
     "next": "^12.2.5",
