chore(app): prepare inputs for auto forms, refactor for database management

--- a/app-src/package.json
+++ b/app-src/package.json
@@ -19,7 +19,6 @@
     "@emotion/react": "^11.10.4",
     "@emotion/server": "^11.10.0",
     "@emotion/styled": "^11.10.4",
-    "@mantine/carousel": "^5.5.5",
     "@mantine/core": "^5.5.5",
     "@mantine/dates": "^5.5.5",
     "@mantine/dropzone": "^5.5.5",
@@ -35,6 +34,9 @@
     "@react-three/drei": "^9.40.0",
     "@react-three/fiber": "^8.9.1",
     "@tabler/icons": "^1.104.0",
+    "@jsonforms/core": "^3.0.0",
+    "@jsonforms/react": "^3.0.0",
+    "@jsonforms/vanilla-renderers": "^3.0.0",
     "dayjs": "^1.11.5",
     "dexie": "^3.2.2",
     "dexie-react-hooks": "^1.1.1",
