--- a/firmware-src/package.json
+++ b/firmware-src/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "firmware-src",
+    "name": "screenchaser-firmware",
     "version": "0.0.0",
     "description": "description",
     "main": "index.js",
