--- a/app-src/package.json
+++ b/app-src/package.json
@@ -50,13 +50,12 @@
     "dexie-react-hooks": "^1.1.1",
     "electron-is-dev": "^2.0.0",
     "electron-next": "^3.1.5",
-    "electron-serve": "^1.1.0",
-    "electron-store": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^3.1.4",
     "screenchaser-core": "^0.3.0",
-    "three": "^0.146.0"
+    "three": "^0.146.0",
+    "victory": "^36.6.10"
   },
   "devDependencies": {
     "@types/node": "^18.16.3",
@@ -66,7 +65,6 @@
     "electron": "^24.1.3",
     "electron-builder": "^23.6.0",
     "next": "13.3.1",
-    "next-transpile-modules": "^10.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "rimraf": "^5.0.0",
