--- a/app-src/package.json
+++ b/app-src/package.json
@@ -42,7 +42,7 @@
     "@mantine/spotlight": "^5.5.5",
     "@react-three/drei": "^9.40.0",
     "@react-three/fiber": "^8.9.1",
-    "@tabler/icons": "^1.104.0",
+    "@tabler/icons-react": "^2.28.0",
     "app-root-path": "3.1.0",
     "conf": "11.0.1",
     "dayjs": "^1.11.5",
