--- a/app-src/package.json
+++ b/app-src/package.json
@@ -54,22 +54,23 @@
     "react-dom": "^18.2.0",
     "react-error-boundary": "^3.1.4",
     "screenchaser-core": "^0.3.0",
-    "three": "^0.146.0"
+    "three": "^0.146.0",
+    "wasmtest":"/home/xi72yow/Schreibtisch/wasmTest"
   },
   "devDependencies": {
     "@types/node": "^18.16.3",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.1",
     "@types/w3c-image-capture": "^1.0.7",
-    "electron": "^24.1.3",
-    "electron-builder": "^23.6.0",
-    "next": "13.3.1",
+    "electron": "25.3.1",
+    "electron-builder": "24.4.0",
+    "next": "13.4.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "rimraf": "^5.0.0",
     "socket.io": "^4.5.4",
     "ts-loader": "^9.4.2",
-    "typescript": "^5.0.4",
-    "webpack-cli": "^5.0.2"
+    "typescript": "^5.1.6",
+    "webpack-cli": "^5.1.4"
   }
 }
