--- a/core-src/package.json
+++ b/core-src/package.json
@@ -7,7 +7,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "ts-node index.ts",
-    "build": "tsc",
+    "asbuild:debug": "asc lib/decay/index.ts --target debug",
+    "asbuild:release": "asc lib/decay/index.ts --target release",
+    "build:assembly": "pnpm run asbuild:debug && pnpm run asbuild:release",
+    "build": "tsc && pnpm run build:assembly",
     "dev": "nodemon lib/manager/taskManager.test.ts",
     "dev-effect": "nodemon lib/effectTest.ts",
     "clean": "rimraf dist"
@@ -19,6 +22,7 @@
     "@types/node": "^18.11.10",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.3"
+    "typescript": "^4.9.3",
+    "assemblyscript": "^0.27.6"
   }
 }
