--- a/core-src/package.json
+++ b/core-src/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "ts-node index.ts",
-    "asbuild:debug": "asc lib/decay/index.ts --target debug",
+    "asbuild:debug": "asc lib/decay/index.ts --target debug && node build-as.js",
     "asbuild:release": "asc lib/decay/index.ts --target release",
     "build:assembly": "pnpm run asbuild:debug && pnpm run asbuild:release",
     "build": "tsc && pnpm run build:assembly",
