--- a/firmware-src/esp8266/package.json
+++ b/firmware-src/esp8266/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "",
-    "clean": ""
+    "clean": "echo \"TODO: clean\""
   },
   "author": "xi72yow",
   "devDependencies": {
