--- a/nx.json
+++ b/nx.json
@@ -1,49 +1,33 @@
 {
-    "tasksRunnerOptions": {
-        "default": {
-            "runner": "nx/tasks-runners/default",
-            "options": {
-                "cacheableOperations": [
-                    "build",
-                    "test"
-                ],
-                "parallel": 5
-            }
-        }
-    },
-    "targetDefaults": {
-        "build": {
-            "dependsOn": [
-                {
-                    "projects": "dependencies",
-                    "target": "build"
-                },
-                {
-                    "target": "guard",
-                    "projects": "self"
-                },
-                {
-                    "target": "clean",
-                    "projects": "self"
-                }
-            ]
-        },
-        "dev": {
-            "dependsOn": [
-                {
-                    "projects": "dependencies",
-                    "target": "build"
-                },
-                {
-                    "target": "guard",
-                    "projects": "self"
-                }
-            ]
-        },
-        "test": {
-            "dependsOn": [
-                "build"
-            ]
-        }
+  "tasksRunnerOptions": {
+    "default": {
+      "runner": "nx/tasks-runners/default",
+      "options": {
+        "parallel": 5
+      }
     }
+  },
+  "targetDefaults": {
+    "build": {
+      "dependsOn": [
+        "^build"
+      ]
+    },
+    "dev": {
+      "dependsOn": [
+        {
+          "projects": "dependencies",
+          "target": "build"
+        }
+      ]
+    },
+    "test": {
+      "dependsOn": [
+        "build"
+      ]
+    }
+  },
+  "affected": {
+    "defaultBase": "main"
+  }
 }
