--- a/app-src/package.json
+++ b/app-src/package.json
@@ -54,7 +54,8 @@
     "react-dom": "^18.2.0",
     "react-error-boundary": "^3.1.4",
     "screenchaser-core": "^0.3.0",
-    "three": "^0.146.0"
+    "three": "^0.146.0",
+    "pocketbase": "0.18.1"
   },
   "devDependencies": {
     "@types/node": "^18.16.3",
