--- a/app-src/package.json
+++ b/app-src/package.json
@@ -21,55 +21,51 @@
     "type-check": "tsc -p ./next-src/tsconfig.json && tsc -p ./electron-src/tsconfig.json"
   },
   "dependencies": {
-    "@electron/remote": "^2.0.8",
-    "@emotion/react": "^11.10.4",
-    "@emotion/server": "^11.10.0",
-    "@emotion/styled": "^11.10.4",
-    "@jsonforms/core": "^3.0.0",
-    "@jsonforms/react": "^3.0.0",
-    "@jsonforms/vanilla-renderers": "^3.0.0",
-    "@mantine/core": "^5.5.5",
-    "@mantine/dates": "^5.5.5",
-    "@mantine/dropzone": "^5.5.5",
-    "@mantine/form": "^5.5.5",
-    "@mantine/hooks": "^5.5.5",
-    "@mantine/modals": "^5.5.5",
-    "@mantine/next": "^5.5.5",
-    "@mantine/notifications": "^5.5.5",
-    "@mantine/nprogress": "^5.5.5",
-    "@mantine/prism": "^5.5.5",
-    "@mantine/rte": "^5.5.5",
-    "@mantine/spotlight": "^5.5.5",
-    "@react-three/drei": "^9.40.0",
-    "@react-three/fiber": "^8.9.1",
-    "@tabler/icons-react": "^2.28.0",
+    "@electron/remote": "^2.1.2",
+    "@emotion/react": "^11.11.3",
+    "@emotion/server": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@jsonforms/core": "^3.2.1",
+    "@jsonforms/react": "^3.2.1",
+    "@jsonforms/vanilla-renderers": "^3.2.1",
+    "@mantine/core": "^7.5.3",
+    "@mantine/dates": "^7.5.3",
+    "@mantine/dropzone": "^7.5.3",
+    "@mantine/form": "^7.5.3",
+    "@mantine/hooks": "^7.5.3",
+    "@mantine/modals": "^7.5.3",
+    "@mantine/next": "^6.0.21",
+    "@mantine/notifications": "^7.5.3",
+    "@mantine/nprogress": "^7.5.3",
+    "@mantine/spotlight": "^7.5.3",
+    "@react-three/drei": "^9.97.6",
+    "@react-three/fiber": "^8.15.16",
+    "@tabler/icons-react": "^2.47.0",
     "app-root-path": "3.1.0",
-    "conf": "11.0.1",
-    "dayjs": "^1.11.5",
-    "dexie": "^3.2.2",
-    "dexie-react-hooks": "^1.1.1",
-    "electron-is-dev": "^2.0.0",
-    "electron-next": "^3.1.5",
+    "conf": "12.0.0",
+    "dayjs": "^1.11.10",
+    "dexie": "^3.2.5",
+    "dexie-react-hooks": "^1.1.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-error-boundary": "^3.1.4",
-    "screenchaser-core": "^0.3.0",
-    "three": "^0.146.0"
+    "react-error-boundary": "^4.0.12",
+    "screenchaser-core": "workspace:^",
+    "three": "^0.161.0"
   },
   "devDependencies": {
-    "@types/node": "^18.16.3",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.1",
-    "@types/w3c-image-capture": "^1.0.7",
-    "electron": "26.1.0",
-    "electron-builder": "24.6.3",
-    "next": "13.4.12",
+    "@types/node": "^20.11.19",
+    "@types/react": "^18.2.56",
+    "@types/react-dom": "^18.2.19",
+    "@types/w3c-image-capture": "^1.0.10",
+    "electron": "28.2.3",
+    "electron-builder": "24.9.1",
+    "next": "14.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "rimraf": "^5.0.0",
-    "socket.io": "^4.5.4",
-    "ts-loader": "^9.4.2",
-    "typescript": "^5.1.6",
+    "rimraf": "^5.0.5",
+    "socket.io": "^4.7.4",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.3.3",
     "webpack-cli": "^5.1.4"
   }
 }
