--- a/core-src/package.json
+++ b/core-src/package.json
@@ -18,11 +18,11 @@
   "keywords": [],
   "author": "xi72yow",
   "devDependencies": {
-    "rimraf": "^5.0.0",
-    "@types/node": "^18.11.10",
-    "nodemon": "^2.0.20",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.3",
-    "assemblyscript": "^0.27.6"
+    "@types/node": "^20.11.19",
+    "assemblyscript": "^0.27.24",
+    "nodemon": "^3.0.3",
+    "rimraf": "^5.0.5",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   }
 }
