--- a/app-src/bundler-src/tsconfig.json
+++ b/app-src/bundler-src/tsconfig.json
@@ -5,6 +5,11 @@
     "module": "ESNext",
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "skipLibCheck": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"],
+      "@core/*": ["src/core/*"]
+    },
 
     /* Bundler mode */
     "moduleResolution": "bundler",
