--- a/app-src/package.json
+++ b/app-src/package.json
@@ -1,8 +1,9 @@
 {
   "productName": "ScreenChaser",
-  "name": "screenchaser-build",
+  "name": "screenchaser-app",
   "description": "leds are follow me",
   "version": "0.4.0",
+  "main": "electron-dist/index.js",
   "databaseVersion": "1",
   "author": "xi72yow <x@xi72yow.de> (https://xi72yow.de)",
   "homepage": "https://github.com/xi72yow/ScreenChaser",
@@ -11,8 +12,8 @@
   "private": true,
   "scripts": {
     "clean": "rimraf dist main next-src/out next-src/.next",
-    "dev": "pnpm run build-electron && electron .",
-    "build-renderer": "next build next-src",
+    "dev": "pnpm run build-electron && electron ./electron-dist",
+    "build-renderer": "vite build bundler-src",
     "build-electron": "tsc -p electron-src",
     "build-steps": "pnpm run build-renderer && pnpm run build-electron",
     "pack-app": "pnpm run build-steps && electron-builder --dir",
@@ -26,7 +27,8 @@
     "electron": "28.2.3",
     "electron-builder": "24.9.1",
     "rimraf": "3.0.2",
+    "ts-node": "10.9.2",
     "typescript": "5.4.5",
-    "ts-node": "10.9.2"
+    "vite": "5.2.10"
   }
 }
