chore: dev deps bump, webgpu processing setup, adjust device scanning

--- a/app-src/bundler-src/tsconfig.json
+++ b/app-src/bundler-src/tsconfig.json
@@ -10,6 +10,7 @@
       "@/*": ["src/*"],
       "@core/*": ["src/core/*"]
     },
+    "types": ["@webgpu/types"],
 
     /* Bundler mode */
     "moduleResolution": "bundler",
